--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
  
   <groupId>net.theblueground</groupId>
-  <artifactId>api</artifactId>
+  <artifactId>bg-sdet-assignment</artifactId>
   <version>1.0-SNAPSHOT</version>
  
   <properties>
