--- a/pom.xml
+++ b/pom.xml
@@ -1,22 +1,63 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
  
   <groupId>net.theblueground</groupId>
   <artifactId>bg-sdet-assignment</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <packaging>pom</packaging>
+  <description>Colonize Mars - Cucumber Ruby Tests</description>
  
   <properties>
+    <properties>
+    <api.version>2</api.version>
+    <scm.type>git</scm.type>
+    <scm.repo>https://github.com/AntonisGiakoumis/bg-sdet-assignment.git</scm.repo>
+    <cucumber.profile>${profile}</cucumber.profile>
+    <cucumber.tag>${tag}</cucumber.tag>
+    <default.cucumber.profile>bg_mars</default.cucumber.profile>
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
   </properties>
- 
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.12</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+
+  <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>1.6</version>
+                <executions>
+                    <execution>
+                        <id>run-tests</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <phase>test</phase>
+                        <id>run-cucumbers</id>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                        <configuration>
+                            <tasks>
+                                <echo message="Running Cucumber Ruby"/>
+                                <java fork="true"
+                                      classname="cucumber.api.cli.Main"
+                                      classpathref="maven.test.classpath"
+                                      failonerror="true">
+                                    <arg value="--plugin"/>
+                                    <arg value="pretty"/>
+                                    <arg value="--glue"/>
+                                    <arg value="."/>
+                                    <arg value="."/>
+                                </java>
+                            </tasks>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+  </build>
 </project>
